# tm-backend-book

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  README.md  WORK_IN_PROGRESS.md  justfile  pyproject.toml  pyproject.toml.old
access_control/: README.md  __init__.py  __main__.py  out.json
access_control/access_control/: asgi.py  settings.py  wsgi.py
access_control/common/db/: __init__.py  exceptions.py  mixins.py  models.py  sequences.py
access_control/conf/: __init__.py  logs.py
access_control/core/: settings.py
access_control/record/: admin.py  models.py
access_control/record/migrations/: 0001_initial.py
access_control/registry/: commands.py
access_control/registry/base/: models.py  policy.py
access_control/registry/companies/: models.py
access_control/registry/groups/: apps.py  models.py
access_control/registry/projects/: apps.py
access_control/registry/references/: mixins.py
access_control/utils/: uuid.py
access_rbac/: README.md
access_rbac/core/: settings.py
access_rbac/templates/: index.html
access_registry/core/: settings.py
access_registry/registry/base/: apps.py  models.py
access_registry/registry/companies/: apps.py  models.py
access_registry/registry/groups/: models.py
access_registry/registry/projects/: admin.py  apps.py  models.py
actix_demo/: Cargo.toml
admin_jet/core/: settings.py
advanced_sessions/: README.md  package.json  tsconfig.json
advanced_sessions/src/: db.test.ts  db.ts  index.ts  migrations.ts
advanced_sessions/src/migrations/: 00003_update_account.sql
advanced_sessions/src/services/: auth.account.ts  auth.helpers.ts  auth.test.ts
advanced_sessions/src/types/: postgres-shift.d.ts
asyncapi-spec-generator/: .gitignore  README.md  example.py  justfile  main.py  pyproject.toml
auth-session/: README.md  bun.lockb  package.json
auth-session/src/: index.ts  models.ts  redis.ts
auth-session/src/migrations/: 00001_create_auth_tables.sql  00002_rename_tables.sql
auth-session/src/plugins/: auth.ts
auth-session/src/services/: auth.helpers.ts  auth.service.ts  auth.session.ts  auth.test.ts
auth-session/src/types/: index.d.ts  postgres-shift.d.ts
binance_api_proxy/: .env.example  Containerfile  README.md  compose.yml  justfile  pyproject.toml
binance_api_proxy/tools/: init-db.sql
context_processor/common/: urls.py  views.py
context_processor/core/: context_processors.py  settings.py  urls.py
context_processor/templates/: index.html
demo_twisted/: makefile  pyproject.toml
demo_twisted/src/dtwisted/: __main__.py  echo_server.py  pubsub.py
django/templates/base/: manage.py
django_api/: asgi.py  asgi_get_issue.py  dmr_bootstrap.py  justfile  minimum.py  pyproject.toml
encore-demo/: package-lock.json  package.json
fastapi-events/: justfile  main.py  pyproject.toml
fastapi-events/app/: asgi.py  config.py  exceptions.py  server.py
fastapi-events/app/lib/: password_hasher.py
fastapi-events/tests/: conftest.py  hypothesis_fixtures.py  user_fixtures.py
fastapi-events/tests/unit/: test_target.py
filter_kit/: README.md  main.py  pyproject.toml
framework-benchmarks/: pyproject.toml
front_pipeline/: README.md  justfile
front_pipeline/app/: urls.py
front_pipeline/core/: settings.py  urls.py
front_pipeline/front/: package.json  webpack.config.js
front_pipeline/front/src/: index.js
front_pipeline/front_react/src/: index.jsx
front_pipeline/static-dev/css/: style.css
front_pipeline/static-dev/js/: index.js  react.js
front_pipeline/templates/: index.html  webpack.html
front_pipeline/web/: urls.py
litestar_demo/: justfile  pyproject.toml
litestar_demo/src/app/: __main__.py  app.py  handlers.py  models.py
locust/: orders_load.py
microservices/: fastapi_protobuf.py  justfile  pyproject.toml
microservices/schemas/: users_pb2.py
monitoring_services/: db.sqlite3
monitoring_services/core/: settings.py  urls.py  wsgi.py
monitoring_services/monitor/: apps.py  health_backend.py  views.py
msg_drive/: main.py  makefile  pyproject.toml
msg_drive/tests/: conftest.py
multiduplex/: README.md  pyproject.toml
multiduplex/src/multiduplex/: __main__.py  server.py
pattern_repository/core/: settings.py
pattern_repository/users/: commands.py  models.py
pipeline_vite/: justfile
pipeline_vite/core/: urls.py
pipeline_vite/frontend/: jsconfig.json  package-lock.json  vite.config.js
pipeline_vite/templates/: index.html
pipeline_vite/web/: urls.py
pipeline_webpack/: README.md
pipeline_webpack/core/: settings.py
pipeline_webpack/front/: package-lock.json  package.json
pipeline_webpack/front_react/: package-lock.json  package.json  webpack.config.js
pipeline_webpack/templates/: native.html  webpack.html
pipeline_webpack/web/: apps.py
protocols/: Dockerfile  pyproject.toml
protocols/app_protocols/: __init__.py  __main__.py  app.py  cli.py  consts.py  dto.py  main.py
protocols/app_protocols/routers/: info.py
protocols/app_protocols/utils/: __init__.py
protocols/docker/: entrypoint.sh
protocols/tests/: test_utils.py
rbac_hierarchy/: README.md  main.py  pyproject.toml
rbac_hierarchy/src/: database.py  mixins.py
real_time_analytics/: README.md  database.py  pyproject.toml
real_time_analytics/alembic/: env.py
real_time_analyze/: README.md  main.py  pyproject.toml
real_time_reports/: README.md  app.py  config.py  justfile  pyproject.toml
robyn_demo/: README.md  dockerfile  justfile  pyproject.toml  pyproject.toml.dep
robyn_demo/src/: app.py  handlers.py
robyn_demo/src/app/: app.py  cache.py  consts.py  di.py  handlers.py  models.py
robyn_demo/tests/: load.py  test.py
robyn_test/: main.py  pyproject.toml
simple-streaming/: justfile  pyproject.toml
simple-streaming/app/: asgi.py  config.py  database.py  workers.py
simple-streaming/tests/: test_services.py
tree_hierarchy/: README.md  justfile
tree_hierarchy/core/: settings.py
tree_hierarchy/hierarchy/: models.py
vite_pipeline/core/: settings.py
vite_pipeline/frontend/: index.html  package.json
webauthn/: README.md  hello.py  pyproject.toml
(+23 files in other folders)
