[tool.poetry]
name = "tm-django-book"
version = "0.1.0"
description = ""
authors = ["TakiMoysha <mpwema782@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
channels = { extras = ["daphne"], version = "^4.0.0" }
daphne = "^4.0.0"
Django = "^5.0"
django-stubs = { extras = ["compatible-mypy"], version = "^4.2.7" }
django-treebeard = "^4.7"
django-health-check = "^3.17.0"
psutil = "^5.9.7"
django-storages = "^1.14.2"
whitenoise = "^6.6.0"
django-livereload-server = "^0.5.1"


[tool.poetry.group.dev.dependencies]
bpython = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [ "mypy_django_plugin.main", ]

# ignore_missing_imports = true
