[project]
name = "asyncapi-spec-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "django",
  "django-modern-rest[msgspec]",
  "granian>=2.6.0",
  "msgspec>=0.20.0",
  "polyfactory>=3.1.0",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
]

[tool.uv.sources]
django_modern_rest = { path = "../packages/django-modern-rest", editable = true }
