[project]
name = "dtwisted"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TakiMoysha", email = "36836047+TakiMoysha@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "twisted[tls]>=24.11.0",
]

[project.scripts]
demo-twisted = "dtwisted:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
