[project]
name = "django-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "granian>=2.5.6",
    "gunicorn>=23.0.0",
    "django_modern_rest",
    "msgspec>=0.19.0",
    "pydantic>=2.12.3",
]

    
[tool.uv.sources]
django_modern_rest = { path = "../../..//projects/django-modern-rest" }
