[project]
name = "django-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "granian>=2.5.6",
    "gunicorn>=23.0.0",
    "django_modern_rest",
    "msgspec>=0.19.0",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "polyfactory>=2.22.3",
    "pytest-asyncio>=1.2.0",
    "sentry-sdk[django]>=2.43.0",
]


[tool.uv.sources]
django_modern_rest = { path = "../../..//projects/django-modern-rest", editable = true }

[dependency-groups]
docs = ["pdoc>=16.0.0"]
