[project]
name = "fastapi-events"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "advanced-alchemy>=1.8.2",
    "fastapi[standard]>=0.126.0",
    "passlib>=1.7.4",
]

[dependency-groups]
tests = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

