[project]
name = "microservices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.120.4",
    "grpcio>=1.76.0",
    "grpcio-reflection>=1.76.0",
    "grpcio-tools>=1.76.0",
    "protobuf>=6.33.0",
    "pydantic>=2.12.3",
]
