[project]
name = "multiduplex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TakiMoysha", email = "36836047+TakiMoysha@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "structlog>=25.2.0",
    "websockets>=15.0.1",
    "ws4py>=0.6.0",
]

[project.scripts]
multiduplex_server = "multiduplex.server:_server_runner"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = []
