[tool.poetry]
name = "protocols_server"
version = "0.1.0"
description = ""
authors = ["TakiMoysha <mpwema782@gmail.com>"]
readme = "README.md"
packages = [
  { include = "app_protocols" },
  { include = "app_protocols/webdav" }
]

[tool.poetry.scripts]
dev = "app_protocols.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[tool.pytest.ini_options]
pythonpath = "."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
