[project]
name = "simple-streaming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.0",
    "httpx>=0.28.1",
    "httpx-ws>=0.8.2",
]

[dependency-groups]
tests = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
